Sorted overflow issue

--- a/main.css
+++ b/main.css
@@ -29,6 +29,7 @@
     position: absolute;
     opacity: 0;
     pointer-events: none;
+    width: 1px;
 }
 
 * { box-sizing: border-box; }
